humidity reading seems to be off
need further check on driver usage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.potatobon.airqualitymonitor.MainActivity">
 
     <TextView
-        android:id="@+id/temperatureTextView"
+        android:id="@+id/readings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
